--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="organizer">
                     <div class="card">
-                        <img src="image/man.png" alt="image" width="150px">
+                        <img src="image/Ubed.png" alt="image" width="150px">
                         <p>Syed Ubedur Rahman</p>
                         <p>Lorem ipsum dolor sit.</p>
                     </div>
