--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
                 <li><a href="index.html" class="navLinks">Home</a></li>
                 <li><a href="banner.html" class="navLinks">Banner</a></li>
                 <li class="active-clr"><a href="gallery.html" class="navLinks">Gallery</a></li>   
-                <li><a href="payment.html" class="navLinks">Payment</a></li>    
+                <!-- <li><a href="payment.html" class="navLinks">Payment</a></li>     -->
             <ul/>
         </header>
 
